server.log

> ayuk-hapan-qris@1.0.0 dev
> node --watch src/server.js

file:///app/src/server.js:11
import { PrismaClient } from '@prisma/client';
         ^^^^^^^^^^^^
SyntaxError: Named export 'PrismaClient' not found. The requested module '@prisma/client' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:

import pkg from '@prisma/client';
const { PrismaClient } = pkg;

    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:103:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.22.1
Failed running 'src/server.js'. Waiting for file changes before restarting...
Restarting 'src/server.js'
node:internal/modules/cjs/loader:1383
  const err = new Error(message);
              ^

Error: Cannot find module '.prisma/client/default'
Require stack:
- /app/node_modules/@prisma/client/default.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/app/node_modules/@prisma/client/default.js:2:6)
    at Module._compile (node:internal/modules/cjs/loader:1705:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ '/app/node_modules/@prisma/client/default.js' ]
}

Node.js v22.22.1
Failed running 'src/server.js'. Waiting for file changes before restarting...
